# breakout

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  agenda.md  conanfile.txt
build_scripts/debug/: build.sh  clean.sh  configure.sh  win32_build.bat  win32_clean.bat  win32_configure.bat  win32_install.bat  win32_rebuild.bat
build_scripts/release/: build.sh  clean.sh  configure.sh  rebuild.sh  win32_build.bat  win32_clean.bat  win32_configure.bat  win32_install.bat  win32_rebuild.bat
data/: level_data.json
inc/: custom_assert.h
src/: CollisionReaction.cpp  CollisionReaction.h  CollisionSystem.cpp  CollisionSystem.h  Component.cpp  Component.h  Engine.cpp  Engine.h  Game.cpp  Game.h  InputSystem.cpp  InputSystem.h  Math.cpp  Math.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  Util.h  breakout.cpp  clock.cpp  clock.h  custom_assert.cpp  unity_build.cpp
